--- a/departures/view/view.html
+++ b/departures/view/view.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
 
-<script src="view/departures.js" type="text/javascript"> </script>
-
 <script type="text/javascript">
-    var view = {
-        message: document.getElementById("message"),
-        location: document.getElementById("location"),
-        stops: document.getElementById("stops")
-    };
-    setView(view);
+
+{{scripts}}
+
+getLocation();
+
 </script>
 
 <head>
