--- a/departures/view/view.html
+++ b/departures/view/view.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html>
 
-<script type="text/javascript">
-
-{{scripts}}
-
-getLocation();
-
-</script>
-
 <head>
     <title>Departures</title>
 </head>
 
 <body>
-    <p id="message">
-        status message goes here
-    </p>
-
-    <p id="location">
-        location goes here
-    </p>
-
-    <p id="stops">
-        stops go here
-    </p>
+    <div id="map"></div>
+    <div id="loc"></div>
 </body>
+
+<script type="text/javascript">
+
+{{scripts}}
+
+view = {
+    loc: document.getElementById("loc"),
+};
+
+function showLocation() {
+    loc = getLocation();
+    view.loc.innerHTML = "lat: " + loc.lat + ", lon: " + loc.lon;
+}
+
+refreshLocation();
+
+</script>
 
 </html>
